...

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/shipping_address_title" />

        </com.google.android.material.appbar.AppBarLayout>
...
                        app:endIconMode="clear_text"
                        app:errorEnabled="true"
                        app:helperText="@{error == null ? @string/empty_string_error : null}"
                        app:message="@{error}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/streetET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeActionLabel="@string/street"
                            android:imeOptions="actionNext"
                            android:inputType="textPostalAddress"
                            app:addTextChangedListener="@{viewModel}"
...
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:hint="@string/town"
                        android:labelFor="@+id/townET"
                        android:maxLines="1"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true"
                        app:helperText="@{error == null ? @string/empty_string_error : null}"
                        app:message="@{error}">

...
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/setHelperText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="8dp"
                    android:labelFor="@id/zipCodeET"
                    android:visibility="@{loading == true ? View.GONE : View.VISIBLE}"
                    app:endIconMode="clear_text"
                    app:message="@{error}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/zipCodeET"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="@{address == null ? View.GONE : View.VISIBLE}">

                <CheckBox
                    android:id="@+id/useSameAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginVertical="8dp"
                    android:layout_marginEnd="16dp"
                    android:onCheckedChanged="@{()-> viewModel.onChecked()}"
                    android:text="@string/use_same_address" />

                <Button
                    android:id="@+id/saveAddressButton"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:onClick="@{()-> saveAddress.invoke()}"
                    android:text="@string/save" />
...
