<resources>
    <string name="app_name">Architect Coders</string>
    <string name="splash_fragment"> Splash Animation Fragment</string>
    <string name="auth_picker_layout">Auth Picker Layout</string>
    <string name="main_store_fragment">MainStoreFragment</string>
    <string name="detail_store_fragment">Detail Store Fragment</string>
    <string name="price">MX$%s.00</string>
    <string name="available_pieces">%s Piezas disponibles</string>
    <string name="user_profile_title">Mi perfil</string>
    <string name="user_favorites_title">Mis favoritos</string>
    <string name="user_shopping_cart_title">Mi carrito de compras</string>
    <string name="user_notifications_title">Mis Notificaciones</string>
    <string name="user_sign_out_title">Cerrar sesión</string>
    <string name="user_profile_fragment">User Profile Fragment</string>
    <string name="spiral">spiral</string>
    <string name="background_circle">background circle</string>
    <string name="piroworkz_logo">piroworkz logo</string>
    <string name="login_with_email">Entrar con email</string>
    <string name="login_with_google">Entrar con google</string>
    <string name="login_with_facebook">Entrar con facebook</string>
    <string name="pinch_zoom">Pinch Zoom</string>
    <string name="sm_size">Talla CH</string>
    <string name="md_size">Talla M</string>
    <string name="lrg_size">Talla GDE</string>
    <string name="add_to_cart">Agregar al carrito.</string>
    <string name="tallas_disponibles">Tallas Disponibles</string>
    <string name="add_photo_button">add photo button</string>
    <string name="edit_billing_address">edit billing address</string>
    <string name="edit_shipping_address">edit shipping address</string>
    <string name="user_info_title">Información de usuario</string>
    <string name="shipping_address_title">Dirección de Envío</string>
    <string name="billing_address_title">Dirección de Facturación</string>
    <string name="toast_cart">%s, ha sido agregado a tu carrito de compras.</string>
    <string name="hint_number">0</string>
    <string name="talla_ch">Talla CH</string>
    <string name="mark_as_favorite_button">mark as favorite button</string>
    <string name="save">Guardar</string>
    <string name="enter_quantity">Ingresar cantidad</string>
    <string name="cancel">Cancelar</string>
    <string name="size_not_available">Talla no disponible</string>
    <string name="change_size">Cambiar talla</string>
    <string name="snack_bar">%s, ha sido agregado a tu carrito con éxito.</string>
    <string name="payment_method_title">Método de pago</string>
    <string name="street">Calle:</string>
    <string name="town">Colonia:</string>
    <string name="city">Municipio/Delegación:</string>
    <string name="state">Estado:</string>
    <string name="zip_code">Código Postal:</string>
    <string name="button">button</string>
    <string name="use_same_address">Usar como dirección de facturación</string>
    <string name="zip_code_hint">Código Postal:</string>
    <string name="edit_info">Editar información</string>
    <string name="card_holder">Nombre del titular</string>
    <string name="card_issuer">Banco emisor</string>
    <string name="card_number">Numero de tajeta</string>
    <string name="card_cvc">CVC</string>
    <string name="card_expiration">Vence</string>
    <string name="photo_url">%s?access_token=%s</string>
    <string name="zip_code_error">%s, no existe.</string>
    <string name="empty_string_error">Debe llenar este campo.</string>
    <string name="text_input_unknown_error">"Error desconocido: %s"</string>
    <string name="expiration_date">MM/AA</string>
    <string name="expiration_date_format">%s/%s</string>
    <string name="delete_button">Eliminar</string>
    <string name="total">Total a pagar: MX$%s.00</string>
    <string name="shopping_cart_title">Carrito de compras</string>
    <string name="total_piezas">Total piezas: %s</string>
    <string name="cart_is_empty">Tu carrito esta vacío</string>
    <string name="checkout">Realizar compra</string>
    <string name="empty_cart_button">Vaciar Carrito</string>
    <string name="favorites_is_empty">No has agregado favoritos</string>
    <string name="remove_from_favorites">Quitar de Favoritos</string>
    <string name="favorites_title">Mis Favoritos</string>
    <string name="notification_channel_id">com.piroworkz.piroworkzmvvm</string>
    <string name="notification_channel_name">piroworkzmvvm</string>
    <string name="notification_message">Tienes %s artículos pendientes de compra, en tu carrito de compras.</string>a
</resources>